src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLXSGISwapControl_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXSGISwapControl_StringErrorContext.class */
public final class GLXSGISwapControl_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glXSwapIntervalSGI(I)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGISwapControlErrorContext");
        return methods;
    }
}
